--- a/Front/src/app/theme/layouts/admin-layout/nav-bar/nav-right/nav-right.component.html
+++ b/Front/src/app/theme/layouts/admin-layout/nav-bar/nav-right/nav-right.component.html
@@ -91,20 +91,24 @@
   </li>
   <li class="dropdown pc-h-item header-user-profile" ngbDropdown>
     <a class="pc-head-link dropdown-toggle arrow-none me-0" ngbDropdownToggle>
-      <img src="assets/images/user/avatar-2.jpg" alt="user-image" class="user-avatar me-2" />
-      <span class="f-w-600">John Doe</span>
+      <div class="flex-shrink-1">
+      <img [src]="currentUser?.photo ? 'data:image/jpeg;base64,' + currentUser.photo : 'assets/images/user/avatar-2.jpg'" 
+           alt="user-image" class="user-avatar-1" />
+      </div>
+      
+      <span class="f-w-600" style="margin-left:10% ;">{{currentUser?.nom +" " + currentUser?.prenom }}</span>
     </a>
     <div class="dropdown-menu dropdown-user-profile dropdown-menu-end pc-h-dropdown" ngbDropdownMenu>
       <div class="dropdown-header">
         <div class="d-flex mb-1">
           <div class="flex-shrink-0">
-            <img src="assets/images/user/avatar-2.jpg" alt="user-image" class="user-avatar wid-35" />
+            <img [src]="currentUser?.photo ? 'data:image/jpeg;base64,' + currentUser.photo : 'assets/images/user/avatar-2.jpg'" 
+                 alt="user-image" class="user-avatar wid-35" />
           </div>
           <div class="flex-grow-1 ms-3 text-start">
-            <h6 class="mb-0">JWT User</h6>
-            <span>UI/UX Designer</span>
+            <h6 class="mb-0">{{currentUser?.nom +" " + currentUser?.prenom  || 'Utilisateur' }}</h6>
+            <span>{{ currentUser?.role || 'Membre' }}</span>
           </div>
-          <a href="javascript:" class="bg-transparent"><i class="d-flex f-20" antIcon theme="outline" type="logout"></i></a>
         </div>
       </div>
       <ul ngbNav #nav="ngbNav" class="nav drp-tabs nav-fill nav-tabs">
@@ -114,23 +118,23 @@
             Profile
           </a>
           <ng-template ngbNavContent>
-            @for (task of profile; track task) {
+           
               <div>
-                <a class="dropdown-item">
-                  <i class="text-muted" antIcon theme="outline" type="{{ task.icon }}"></i>
-                  <span>{{ task.title }}</span>
-                </a>
+                <button class="dropdown-item"   routerLink="/profile">
+                  <i class="text-muted" antIcon theme="outline" type="user"></i>
+                  <span>Profile</span>
+                </button>
               </div>
-            }
+            
             <div>
-              <a class="dropdown-item">
+              <button class="dropdown-item" routerLink="/login" (click)="logout()">
                 <i class="text-muted" antIcon theme="outline" type="logout"></i>
                 <span>Logout</span>
-              </a>
+              </button>
             </div>
           </ng-template>
         </li>
-        <li ngbNavItem="2">
+        <!--<li ngbNavItem="2">
           <a ngbNavLink>
             <i class="me-2" antIcon theme="outline" type="setting"></i>
             Setting
@@ -145,7 +149,7 @@
               </div>
             }
           </ng-template>
-        </li>
+        </li>-->
       </ul>
       <div [ngbNavOutlet]="nav"></div>
     </div>
