--- a/Front/src/app/features/event-launch/event-launch.component.scss
+++ b/Front/src/app/features/event-launch/event-launch.component.scss
@@ -22,3 +22,23 @@ textarea {
     transform: translateY(-50%);
   }
 }
+.custom-alert {
+  padding: 15px;
+  border-radius: 8px;
+  font-weight: 500;
+  margin-bottom: 1rem;
+  text-align: center;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
+
+.success-alert {
+  background-color: #d4edda;
+  color: #155724;
+  border-left: 5px solid #28a745;
+}
+
+.error-alert {
+  background-color: #f8d7da;
+  color: #721c24;
+  border-left: 5px solid #dc3545;
+}
