--- a/Front/src/app/accueil/accueil.component.html
+++ b/Front/src/app/accueil/accueil.component.html
@@ -42,7 +42,7 @@
 
   <div class="container hero-content">
       <div class="welcome">
-          <h2>BIENVENUE SUR CLUBSPHERE</h2>
+          <h2>BIENVENUE SUR CLUBSPHEREE</h2>
           <p class="hero-subtitle">La plateforme de gestion des clubs de l'ENICarthage</p>
       </div>
   </div>
