--- a/Front/src/app/creationclub/creationclub.component.html
+++ b/Front/src/app/creationclub/creationclub.component.html
@@ -5,7 +5,7 @@
       <span>Demande de création de club</span>
     </h2>
     <p class="section-description">
-      Les étudiants souhaitant ouvrir un nouveau club doivent remplir ce formulaire.<br>
+      Les étudiantss souhaitant ouvrir un nouveau club doivent remplir ce formulaire.<br>
       Merci de fournir des informations précises pour faciliter le traitement de votre demande.
     </p>
     <div class="title-underline"></div>
