--- a/Front/src/app/demo/component/basic-component/color/color.component.html
+++ b/Front/src/app/demo/component/basic-component/color/color.component.html
@@ -1,105 +1,1 @@
-<section id="enroll" class="appointment section">
-        
-  <div class="container section-title" data-aos="fade-up">
-    <h2>Enroll</h2>
-    <p>
-      Veuillez remplir ce formulaire pour prendre rendez-vous pour un entretien.
-    </p>
-  </div>
-
-
-  <div class="container" data-aos="fade-up" data-aos-delay="100">
-    <form
-      action="forms/appointment.php"
-      method="post"
-      role="form"
-      class="php-email-form"
-    >
-      <div class="row">
-        <div class="col-md-4 form-group">
-          <input
-            type="text"
-            name="name"
-            class="form-control"
-            id="name"
-            placeholder="Your Name"
-            required=""
-          />
-        </div>
-        <div class="col-md-4 form-group mt-3 mt-md-0">
-          <input
-            type="email"
-            class="form-control"
-            name="email"
-            id="email"
-            placeholder="Your Email"
-            required=""
-          />
-        </div>
-        <div class="col-md-4 form-group mt-3 mt-md-0">
-          <input
-            type="tel"
-            class="form-control"
-            name="phone"
-            id="phone"
-            placeholder="Your Phone"
-            required=""
-          />
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4 form-group mt-3">
-          <input
-            type="datetime-local"
-            name="date"
-            class="form-control datepicker"
-            id="date"
-            placeholder="Appointment Date"
-            required=""
-          />
-        </div>
-        <div class="col-md-4 form-group mt-3">
-          <select
-            name="department"
-            id="department"
-            class="form-select"
-            required=""
-          >
-            <option value="">Select Department</option>
-            <option value="Department 1">informatique</option>
-            <option value="Department 2">mecatronique</option>
-            <option value="Department 2">infotronique </option>
-            <option value="Department 3">geie indus</option>
-          </select>
-        </div>
-        <div class="col-md-4 form-group mt-3">
-          <select
-            name="doctor"
-            id="doctor"
-            class="form-select"
-            required=""
-          >
-            <option value="">niveau d'etude</option>
-            <option value="Doctor 1">1ere</option>
-            <option value="Doctor 2">2eme</option>
-            <option value="Doctor 3">3eme</option>
-          </select>
-        </div>
-      </div>
-
-      <div class="form-group mt-3">
-        <textarea
-          class="form-control"
-          name="message"
-          rows="5"
-          placeholder="Motivation (Optional)"
-        ></textarea>
-      </div>
-      
-      
-      
-    </form>
-  </div>
-
-</section>
-
+<p>works</p>
