--- a/Front/src/app/gestion-contacts-urgence/gestion-contacts-urgence.component.scss
+++ b/Front/src/app/gestion-contacts-urgence/gestion-contacts-urgence.component.scss
@@ -76,3 +76,14 @@ app-card {
     border-bottom: 2px solid #ccc;
   }
 }
+.badge {
+  padding: 0.35em 0.65em;
+  font-size: 0.75em;
+  font-weight: 700;
+  line-height: 1;
+  color: #fff;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  border-radius: 0.25rem;
+}
