--- a/Front/src/app/theme/layouts/admin-layout/navigation/nav-content/nav-collapse/nav-collapse.component.html
+++ b/Front/src/app/theme/layouts/admin-layout/navigation/nav-content/nav-collapse/nav-collapse.component.html
@@ -1,21 +1,14 @@
 <li data-username="mantis dashboard" class="nav-item coded-hasmenu" [routerLinkActive]="['active']">
   <a [routerLinkActive]="['active']" (click)="navCollapse($event)">
-    @if (item.icon) {
-      <span class="coded-micon">
-        <i antIcon type="{{ item.icon }}" theme="outline"></i>
-      </span>
-    }
-    <span class="coded-mtext">
-      {{ item.title }}
+    <span *ngIf="item.icon" class="coded-micon">
+      <i antIcon [type]="item.icon" theme="outline"></i>
     </span>
+    <span class="coded-mtext">{{ item.title }}</span>
   </a>
   <ul class="coded-submenu" [routerLinkActive]="['active']" [ngClass]="item.classes!">
-    @for (item of item.children; track item) {
-      @if (item.type === 'item') {
-        <app-nav-item [item]="item"></app-nav-item>
-      } @else if (item.type === 'collapse') {
-        <app-nav-collapse [item]="item"></app-nav-collapse>
-      }
-    }
+    <ng-container *ngFor="let subItem of item.children">
+      <app-nav-item *ngIf="subItem.type === 'item'" [item]="subItem"></app-nav-item>
+      <app-nav-collapse *ngIf="subItem.type === 'collapse'" [item]="subItem"></app-nav-collapse>
+    </ng-container>
   </ul>
 </li>
