--- a/Front/src/app/theme/layouts/admin-layout/navigation/nav-content/nav-content.component.html
+++ b/Front/src/app/theme/layouts/admin-layout/navigation/nav-content/nav-content.component.html
@@ -1,5 +1,6 @@
 <!-- Vertical layout -->
-  <div class="navbar-content">
+<div class="navbar-content">
+  <div class="sidebar-scroll">
     <ul class="nav coded-inner-navbar" (clickOutside)="fireOutClick()" (mouseleave)="navMob()">
       @for (item of navigations; track item) {
         @if (item.type === 'group') {
@@ -8,3 +9,4 @@
       }
     </ul>
   </div>
+</div>
