--- a/Front/src/app/theme/layouts/admin-layout/navigation/navigation.component.html
+++ b/Front/src/app/theme/layouts/admin-layout/navigation/navigation.component.html
@@ -1,7 +1,7 @@
 <nav>
   <div class="navbar-wrapper">
     <div class="m-header">
-      <a href="javascript:" class="b-brand">
+      <a [routerLink]="['/accueil']" class="b-brand">
         <img src="assets/images/logo.png" alt="theme-logo" class="logo logo-dark logo-lg" />
       </a>
     </div>
