--- a/Front/src/app/creationclub/creationclub.component.scss
+++ b/Front/src/app/creationclub/creationclub.component.scss
@@ -467,3 +467,12 @@ fieldset label {
     }
   }
 
+  .error-message {
+    color: #dc3545;
+    font-size: 0.875rem;
+    margin-top: 0.25rem;
+  }
+  
+  .form-input.ng-invalid.ng-touched {
+    border-color: #dc3545;
+  }
