--- a/Front/src/app/profile/profile.component.html
+++ b/Front/src/app/profile/profile.component.html
@@ -10,7 +10,7 @@
   <form [formGroup]="profileForm" (ngSubmit)="onSubmit()" *ngIf="!isLoading" class="vertical-form">
     <!-- Photo Upload -->
     <div class="photo-upload">
-      <img [src]="userProfile?.photo ? 'data:image/jpeg;base64,' + userProfile.photo : 'assets/images/default-profile.png'" 
+      <img [src]="formatImage(userProfile)" 
            class="profile-photo">
       <label class="upload-btn">
         <input type="file" accept=".jpg,.jpeg,.png,.gif" (change)="onFileChange($event)" hidden>
@@ -25,27 +25,29 @@
       </h3>
       
       <div class="form-grid">
-        <div class="form-group">
+        <div *ngIf="currentRole !== 'MANAGER'" class="form-group">
           <label>Nom</label>
-          <input type="text" class="form-control" formControlName="nom">
+          <input type="text" class="form-control" formControlName="nom" 
+                 [readonly]="currentRole === 'MANAGER'">
         </div>
         
-        <div class="form-group">
+        <div *ngIf="currentRole !== 'MANAGER'" class="form-group">
           <label>Prénom</label>
-          <input type="text" class="form-control" formControlName="prenom">
+          <input type="text" class="form-control" formControlName="prenom"
+                 [readonly]="currentRole === 'MANAGER'">
         </div>
         
-        <div class="form-group">
+        <div *ngIf="currentRole !== 'MANAGER'" class="form-group">
           <label>CIN</label>
           <input type="text" class="form-control" formControlName="cin">
         </div>
 
         <div class="form-group">
           <label>Email</label>
-          <input type="email" class="form-control" formControlName="email">
+          <input type="email" class="form-control" formControlName="email" required>
         </div>
 
-        <div class="form-group">
+        <div *ngIf="currentRole !== 'MANAGER'" class="form-group">
           <label>Sexe</label>
           <select class="form-select" formControlName="sexe">
             <option [ngValue]="null" disabled>Sélectionnez</option>
@@ -56,7 +58,7 @@
     </div>  
 
     <!-- Informations Académiques -->
-    <div class="form-section">
+    <div *ngIf="currentRole === 'MEMBER'" class="form-section">
       <h3 class="section-title">
         <i class="bi bi-book"></i> Informations Académiques
       </h3>
